# visionCNN

./: .gitignore  =1.35  CLAUDE.md  README.md  environment.yml  logs  pyproject.toml  simple5layer.ipynb  test.ipynb
.claude/: .nfs00000000008dbd2700000083  settings.json
configs/: convnextv2_tiny.yaml  convnextv2_tiny_10pct.yaml  convnextv2_tiny_50pct.yaml  convnextv2_tiny_strong_aug.yaml  convnextv2_tiny_strong_aug_10pct.yaml  convnextv2_tiny_strong_aug_50pct.yaml  ecoset_imagenet_classes.txt  norm_experiment.yaml  norm_experiment_extended.yaml  resnet18_imagenet.yaml  resnet18_imagenet_cached.yaml  resnet18_imagenet_dali.yaml  resnet18_imagenet_dali_cached.yaml  resnet18_imagenet_guppy.yaml  resnet18_imagenet_guppy_dali.yaml  resnet18_imagenet_guppy_dali_cached.yaml  resnet18_imagenet_snellius.yaml  resnet18_imagenet_snellius_dali.yaml  simple_cnn.yaml  simple_cnn_10pct.yaml  simple_cnn_50pct.yaml  simple_cnn_strong_aug.yaml  simple_cnn_strong_aug_10pct.yaml  simple_cnn_strong_aug_50pct.yaml
notebooks/: simple5layer.ipynb
scripts/: analyze.py  analyze_ecovalid_3arch.py  analyze_error_consistency.py  analyze_imagenet_ecoset_experiment.py  analyze_norm_experiment.py  analyze_norm_experiment_extended.py  compare_models.py  compute_ecoset_overlap.py  download_ecoset.sh  eval.py  evaluate_ood_full.py  extract_features.py  fetch_wandb_ecovalid_3arch.py  generate_sin.py  launch_guppy.sh  launch_local.sh  launch_norm_experiment.sh  launch_norm_experiment_extended.sh  launch_sakura.sh  launch_snellius.sh  launch_snellius_test.sh  precache_imagenet.py  resubmit_incomplete.sh  (+24 more)
(+1587 files in other folders)
